--- a/TODO.txt
+++ b/TODO.txt
@@ -1,18 +1,42 @@
-mod计划列表：
-木卫二萌化计划
-	-多功能工具AI使用研究
-	-重力子放出装置
-	-修改水下推进器贴图
-	-修改更多武器贴图
-	  -smg弹药
-	-男性头
-	-男性衣服
-	-男性声音
-	  -各种
-	  -名字
-	-humanhusk肢体角色重做
-	-海盗头盔、海盗盔甲
-	-近战武器
+ToDo
+Barotruama_Animated Classic
+	事不过三兄 维护
+	修改衣服
+		战地医疗服
+		vip
+		海盗头盔
+		海盗盔甲
+	增加衣服
+		迅猛龙甲
+		u-81
+		坚野
+		剑士服
+		修女服
+	异星物质
+		异星物质提取器
+		异星物质套装
+			潜水柜图片
+			把头盔拆开
+			增加item推进器
+	改NPC发型
+		
+	新加发型
+		lots to do
+	增加男性
+		lots to do
+	修改武器
+		电击甩棍 改成光剑
+		突击步枪 改贴图
+		裂变加速器 改为不同弹药不同效果
+	整合各种新加的资源
+		新的商人
+		制造机
+	humanhusk肢体角色重做
+Barotruama_Animated Lite
+	Biff_W 维护
+Barotruama_Animated_addon 
+	ToDo
+	航道中央的补给站，有npc，卖东西
 东亚重工科技
 	-东亚重工制造终端
 	-Emdrive
@@ -22,36 +46,10 @@ mod计划列表：
 	-防辐射基因
 	-开门钥匙
 	-远程制造机
-其他
-	-爬爬娘化（
 更有意义的天赋物品
 	-便携排水泵可接电
-	-带悬浮灯的载货滑板车
+	-更高级载货滑板车
 	-更高级的裂变加速器
 	-贫化增强
 	-3格基因拼接器
 站点NPC与事件
-
-更多舰船升级
-	-参考外国佬的mod
-
-00
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863521007/AC655D0C42A29ACD971B4ADCA0D663FE5F013506/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863498194/F83663F3691424235F96ACB26C487997FC3A4739/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863498960/70D59081856927DAD813A8874E7E1C567A1BDF60/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863499403/D057C6EAD33426972DB3DE0361849838F5496FD4/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863499807/A6EDA2B10A8EA7FDEEB51E4C730B7D035B6F7D78/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863500239/0FBDF7EB5F9CB0DFC2E32964ED0B387C884599DE/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863500701/AF867C42315F5DC819DC72F84D12DBF043DD1D1E/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863501278/CE305D42072AD47C9338CD3CBBE2E36A0CC237AB/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863501885/564D679CF98A190A13029EC209DA0CA2369E3EA4/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
-
-[img]https://steamuserimages-a.akamaihd.net/ugc/1886464214863520554/74C1A8F69B2BF5696366561909E23AD98E2472C8/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false[/img]
