--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+2022 10/27 7:46 (GMT)
+删除eahi自注射耳机、扩容包、激光弹药箱、声呐、多功能工具
+删除eahi_pucs的治疗功能
+修改eahi联络员的耳机
+删除大部分npc服装的减伤属性，更改价格（保留的司务长、站点管理员、站点安全官、vip的）
+删除稀有小丑服的减伤（保留安装配件和少量技能加成）
+删除载货助推器的重写
+修改医生服装的口袋容量为3
+修改机修工的服装，减伤改为原版值
+修改萌化版的原版武器制造配方，消耗一个原武器与少量材料，无技能需求(鱼叉枪除外，原版就能造)，属性继承原版武器，兼容重写类mod
+
 2022 10/26 13:56 (GMT)
 把一些杂七杂八的数据同步官方0.19的更新
 
