--- a/TODO.txt
+++ b/TODO.txt
@@ -7,7 +7,6 @@ Barotruama_Animated Classic
 		海盗头盔
 		海盗盔甲
 	增加衣服
-		迅猛龙甲
 		u-81
 		坚野
 		剑士服
@@ -19,6 +18,7 @@ Barotruama_Animated Classic
 			潜水柜图片
 			把头盔拆开
 			增加item推进器
+		新的套装
 	改NPC发型
 		
 	新加发型
