--- a/changelog.txt
+++ b/changelog.txt
@@ -1,35 +1,14 @@
-2022 10/30 20:55 (GMT)
-工作进度：小丑未开始
-2022 10/29 18:55(GMT)
-修改迅猛龙甲壳
-增加受伤贴图
-修正localization
-修改EAHI pucs的贴图并增加了rgb光效
-修改了异星血浆研究获得的基因，并修改概率增加失败概率
-修改了部分隐藏肢体
-删除了用不到的贴图
-增加了异星物质
-修改战术腰带的贴图，并更改穿戴位置
-更改封面大小为512
-更改了TODOlist
-增加一种脸型
-修改ragdoll
-修改filelist
-
-2022 10/26 17:43(GMT)
-合并了dev分支
-更改封面
-
-2022 10/26 13:56 (GMT)
-把一些杂七杂八的数据同步官方0.19的更新
-
-潜水服的充氧逻辑
-基因拼接器、载货助推器的配方
-大部分服装的密度、掉落状态的物理体积
-部分物品的价格（平民服装的价格没同步）
-修复战术背带分解产出套用了突击步枪的分解产出
-简化了带鳍潜水服的文档，与战斗潜水服相同的部分可以直接继承
-更新了被重写的原版武器的数据（密度降低，0.19官方把左轮射速加快100%，鱼叉减慢了50%，霰弹枪加快50%）
-更新文件路径，原OutpostGenerationNpcs.xml文件移动到NPCPrefabs文件夹，并更名为CombatMissionNpcs.xml
-更新海盗服的价格写法，补上物品栏图标
-移除人物动作文件夹，直接引用原版
+2022 11/3 13:29
+Xlite 1.0，基于Xpath 1.0版
+删除了EAHI相关的内容、EPSP和额外服装
+删除了对叠氮化合物、液氧罐、异星血浆、研究台的重写
+修改了迅猛龙甲壳
+删除了手炮子弹的重写
+删除了站点安全官服装的额外属性
+删除了对快速裂变加速器制造品质的更改
+删除了对载货助推器的重写
+删除了waifu_weapons
+删除了对舰长职业的重写
+删除了npc整活对话
+修复了海盗头巾、海盗船长帽的贴图问题
+修复了研究员服装无法拾起的问题
