--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+2022 11/29
+同步测试版0.20.8.0的数据
+
+2022 11/8 
+更新human和humanhusk
+更新数据
+
 2022 10/31 6:47 (GMT)
 修改ragdoll(添加受伤贴图)
 修改human.xml，移除人类的出血自然恢复（恢复原版数据）
