--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+更新舰长服1/3的贴图(与witd同步)
+更新医生制服2的贴图(与witd同步)
+更新VIP1的贴图(使用witd的舰长制服2)
+更新海盗防弹衣的贴图(与witd同步)
+交换海盗服装1/2的贴图(与witd同步)
+降低海盗头巾的抗性
+修复带鳍潜水服的配方
+11日
+1月
+2023年
+
 2022 12/15
 同步0.20.15.0的数据
 
