--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 ToDo
 Barotruama_Animated Classic
 	事不过三兄 维护
+	平衡
+		所有新加的生成方式
+		所有新加的防护能力
 	修改衣服
 		海盗头盔
 		海盗盔甲
@@ -31,8 +34,6 @@ Barotruama_Animated Classic
 		新的商人
 		制造机
 	humanhusk肢体角色重做
-Barotruama_Animated Lite
-	Biff_W 维护
 Barotruama_Animated_addon 
 	ToDo
 	航道中央的补给站，有npc，卖东西
