--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+2023 2/3
+更新潜水服数据，但不完全同步官方，加了点眩晕抗性
+修复vip1手臂隐藏的问题，改成舰长vip，加15驾驶技能
+更新pucs，加点水流抗性
+更新带鳍潜水服，修复制造消耗钛铝合金的问题
+修复鱼叉枪里的手电筒不能镜像的问题
+更新海盗防弹衣商店写法
+格式化文件
+备注：三兄，考虑一下把服装抗性同步原版，有必要的话就加强潜水服
+
 2023 2/2 8:43
 修复[EA-Hi]pucs的inventoryicon贴图问题
 更新witd的海盗防弹衣贴图
