--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 2023 2/3
+更改了贴图地址（虽然我也不知道有为啥要这么干）
+祈澪衫帽子(WIP)
+witd战地医疗服
+
+2023 2/3
 更新潜水服数据，但不完全同步官方，加了点眩晕抗性
 修复vip1手臂隐藏的问题，改成舰长vip，加15驾驶技能
 更新pucs，加点水流抗性
