--- a/changelog.txt
+++ b/changelog.txt
@@ -1,17 +1,29 @@
-2023 2/3
+2/3
 更改了贴图地址（虽然我也不知道有为啥要这么干）
 祈澪衫帽子(WIP)
 witd战地医疗服
 
-2023 2/3
+2/3
+平衡服装抗性
 更新潜水服数据，但不完全同步官方，加了点眩晕抗性
 修复vip1手臂隐藏的问题，改成舰长vip，加15驾驶技能
 更新pucs，加点水流抗性
 更新带鳍潜水服，修复制造消耗钛铝合金的问题
 修复鱼叉枪里的手电筒不能镜像的问题
 更新海盗防弹衣商店写法
-格式化文件
-备注：三兄，考虑一下把服装抗性同步原版，有必要的话就加强潜水服
+删除了NPC整活对话
+增加了很多整活沉船尸体
+
+1/11
+更新舰长服1/3的贴图(与witd同步)
+更新医生制服2的贴图(与witd同步)
+更新VIP1的贴图(使用witd的舰长制服2)
+更新海盗防弹衣的贴图(与witd同步)
+交换海盗服装1/2的贴图(与witd同步)
+降低海盗头巾的抗性
+修复带鳍潜水服的配方
+
+2023年
 
 2023 2/2 8:43
 修复[EA-Hi]pucs的inventoryicon贴图问题
