--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,11 @@
+2/4
+更新数据，同步0.22.0.0
+修复保安服露出腰部肢体的问题
+
 2/3
 更新医生制服的贴图(与witd同步)
 
-11/1
+1/11
 更新舰长服1/3的贴图(与witd同步)
 更新医生制服2的贴图(与witd同步)
 更新VIP1的贴图(使用witd的舰长制服2)
@@ -12,11 +16,9 @@
 
 2023年
 
-2022 12/15
-同步0.20.15.0的数据
+2022 12/15 同步0.20.15.0的数据
 
-2022 11/29
-同步测试版0.20.8.0的数据
+2022 11/29 同步测试版0.20.8.0的数据
 
 2022 11/8 
 更新human和humanhusk
