Squashed commit of the following:
commit 29eb588d5f4ad777b06289add35073d3bbcaa524
Author: BiffW <1315036176@qq.com>
Date:   Wed Mar 1 17:26:30 2023 +0800

    修改武器

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 2/28
 1.1.1c4.2
 裁剪修改部分贴图
+3/1
+加强冲锋枪和亡眼的性能
+更新冲锋枪、亡眼和冲锋枪弹匣的贴图(换成Xpath版)
+给冲锋枪加了连续射击扩散增加的机制
+修改一些武器的枪口位置，与贴图匹配
 
 2/27
 1.1.0c3.0-1.1.0c4.1
