--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+3/14
+1.1.1出.4
+适配1.0的更新
+
 3/13
 1.1.1c4.3
 eventset适配游戏1.0版本
@@ -7,14 +11,15 @@ eventset适配游戏1.0版本
 修复保安服露出腰部肢体的问题
 修复海盗服2（现在是分裂派服装2）腿部贴图有多余的黑边
 
-2/28
-1.1.1c4.2
-裁剪修改部分贴图
 3/1
 加强冲锋枪和亡眼的性能
 更新冲锋枪、亡眼和冲锋枪弹匣的贴图(换成Xpath版)
 给冲锋枪加了连续射击扩散增加的机制
 修改一些武器的枪口位置，与贴图匹配
+
+2/28
+1.1.1c4.2
+裁剪修改部分贴图
 
 2/27
 1.1.0c3.0-1.1.0c4.1
