--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,10 @@
 ToDo
-Barotruama_Animated Classic
+Barotruama_Animated
+	男性版本
+	需要新加头发
+	需要新加面部
+	修改舰长改靴子
+
 	事不过三兄 维护
 	给特种epsp加上劣化战斗兴奋剂效果
 	更改高级声纳贴图
@@ -30,10 +35,6 @@ Barotruama_Animated Classic
 		新的套装
 	改NPC发型
 		
-	新加发型
-		lots to do
-	增加男性
-		lots to do
 	修改武器
 		电击甩棍 改成光剑
 		突击步枪 改贴图
