--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
-2024/06/16
-
+2024/06/18
+1.3.3c8.3
+便于维护把pucs分离成单独的文件
+更新至游戏版本1.5.7.0
+    在更新过程中可能把部分有意图改动的代码回归原版了
+    现在所有改动的部分除了贴图改动, 都会注释 MOD FEATURE, 并简要描述改了什么
+修改了咸鱼剑的贴图
+修正的英语本地化(是的, 这一年了, 我终于把英语本地化搞好了)
+增加了繁中本地化
 
 0327
 1.2.0c5.2
