--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,18 @@
 ToDo
 Barotruama_Animated Classic
 	事不过三兄 维护
-	给特种epsp加上劣化战斗兴奋剂效果
+	High piority: Reivse all the added new items
+	New Faction: EA-Hi, new mission & new reputation system & new outpost module
+	Draw some new texture for EXO and clown EXO
 	更改高级声纳贴图
 	构想：重写泡沫固化手榴弹让其能作为榴弹发射？
 	构想：EPSP和EA系pucs该如何联动？
-	吞噬燃料棒作为动力的动力甲，逻辑类似biff的io箱
 	biff的假面骑士
 	
 	思考：铁甲
 
 	黑市商人
 	
-	修改衣服
-		海盗头盔
 	增加衣服
 		u-81
 		坚野
@@ -34,7 +33,6 @@ Barotruama_Animated Classic
 	增加男性
 		lots to do
 	修改武器
-		电击甩棍 改成光剑
 		突击步枪 改贴图
 		裂变加速器 改为不同弹药不同效果
 	整合各种新加的资源
