--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,27 @@
+2024/06/21
+1.3.3c8.5
+现在新加服装作为站点commoner的服装随机出现
+清除了EAHI任务的硬本地化, 文本改为写在本地化文件中
+暂时移除了所有EAHI任务的声望变化
+潜水服跟进1.5.8.0版本
+EPSP现在的移动速度正常了
+
+2024/06/19
+1.3.3c8.4
+修复所有潜水服的头部贴图位置错误
+修改潜水服光照贴图, 降低光照范围
+移除中文人名, 后续会作为补充mod
+
+2024/06/18
+1.3.3c8.3
+便于维护把pucs分离成单独的文件
+更新至游戏版本1.5.7.0
+    在更新过程中可能把部分有意图改动的代码回归原版了
+    现在所有改动的部分除了贴图改动, 都会注释 MOD FEATURE, 并简要描述改了什么
+修改了咸鱼剑的贴图
+修正的英语本地化(是的, 这一年了, 我终于把英语本地化搞好了)
+增加了繁中本地化
+
 0327
 1.2.0c5.2
 合并dev分支
