--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+2024/06/22
+1.3.3c8.6
+处理Linux下路径大小写问题
+删除不再使用的中文人名文件
+给部分头发添加了replacewhenwearinghat属性
+给铁甲增加了掉落贴图
+修改cult1腿部
+
 2024/06/21
 1.3.3c8.5
 现在新加服装作为站点commoner的服装随机出现
