增加subcategories标签如maid, cosplay, wip

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2024/8/13
+1.3.3c8.8
+增加subcategories标签如maid, cosplay, wip
+测试: faction, 加工台
+
 2024/8/11
 1.3.3c8.7
 修复divingmask问题，取消epsp动画，铁甲临时贴图
