DEV: 东亚重工广告，派系贴图

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,11 @@
+2024、8、15
+1.3.3c8.9
+DEV: 东亚重工广告，派系贴图
+
 2024/8/13
 1.3.3c8.8
 增加subcategories标签如maid, cosplay, wip
-测试: faction, 加工台
+DEV: faction, 加工台
 
 2024/8/11
 1.3.3c8.7
