--- a/TODO.txt
+++ b/TODO.txt
@@ -2,13 +2,15 @@ ToDo
 Barotruama_Animated Classic
 	事不过三兄 维护
 	High piority: Reivse all the added new items
-	New Faction: EA-Hi, new mission & new reputation system & new outpost module
+	New Faction: EA-Hi, new mission & new reputation system
 	Draw some new texture for EXO and clown EXO
 	更改高级声纳贴图
 	构想：重写泡沫固化手榴弹让其能作为榴弹发射？
-	构想：EPSP和EA系pucs该如何联动？
 	biff的假面骑士
 	
+	EPSP > E.P.S PUCS
+	隐形epsp > 实验性压力稳定剂注射耳机
+
 	思考：铁甲
 
 	黑市商人
@@ -22,8 +24,6 @@ Barotruama_Animated Classic
 		异星物质提取器
 			到底怎么做这个东西还需要进一步思考
 		异星物质套装
-			潜水柜图片
-			把头盔拆开
 			增加item推进器
 		新的套装
 	改NPC发型
