--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
-2024、8、15
+2024/8/21
+1.3.3c8.10
+修复：头部受伤贴图
+增加：天火两种背包icon，铁甲背包icon，两种女仆背包icon
+修改路径：把几种冷兵器和铁甲加入EarthSeries文件夹
+DEV：东亚重工联络员通讯器，东亚重工联络员事件，战士服，异星潜水服，HGIS
+
+2024/8/15
 1.3.3c8.9
 DEV: 东亚重工广告，派系贴图
 
