--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,22 @@
+2024/8/22
+1.3.3c8.11
+删除: 不需要的AFF, talent
+修复: EPSP移动速度, 水流抗性
+修改: 电基鱼叉, 增加手电筒格, 改变鱼叉贴图
+修改路径: 把几种EPSP放入EPSPSeries文件夹
+DEV: 东亚重工联络员事件, 东亚重工商人
+TODO: 本地化, 多功能工具,战士服
+
 2024/8/21
 1.3.3c8.10
-修复：头部受伤贴图
-增加：天火两种背包icon，铁甲背包icon，两种女仆背包icon
-修改路径：把几种冷兵器和铁甲加入EarthSeries文件夹
-DEV：东亚重工联络员通讯器，东亚重工联络员事件，战士服，异星潜水服，HGIS
+修复: 头部受伤贴图
+增加: 天火两种背包icon, 铁甲背包icon, 两种女仆背包icon
+修改路径: 把几种冷兵器和铁甲加入EarthSeries文件夹
+DEV: 东亚重工联络员通讯器, 东亚重工联络员事件, 战士服, 异星潜水服, HGIS
 
 2024/8/15
 1.3.3c8.9
-DEV: 东亚重工广告，派系贴图
+DEV: 东亚重工广告, 派系贴图
 
 2024/8/13
 1.3.3c8.8
@@ -16,7 +25,7 @@ DEV: faction, 加工台
 
 2024/8/11
 1.3.3c8.7
-修复divingmask问题，取消epsp动画，铁甲临时贴图
+修复divingmask问题, 取消epsp动画, 铁甲临时贴图
 
 2024/06/22
 1.3.3c8.6
@@ -58,7 +67,7 @@ EPSP现在的移动速度正常了
 0323
 1.2.0c5.1.2
 格式化文件
-整合witd的妮姬制服，替换安全官制服
+整合witd的妮姬制服, 替换安全官制服
 原安全官制服替换炮手制服
 
 0322
@@ -103,7 +112,7 @@ eventset适配游戏1.0版本
 加强冲锋枪和亡眼的性能
 更新冲锋枪、亡眼和冲锋枪弹匣的贴图(换成Xpath版)
 给冲锋枪加了连续射击扩散增加的机制
-修改一些武器的枪口位置，与贴图匹配
+修改一些武器的枪口位置, 与贴图匹配
 
 2/28
 1.1.1c4.2
@@ -111,7 +120,7 @@ eventset适配游戏1.0版本
 
 2/27
 1.1.0c3.0-1.1.0c4.1
-修改ragdoll，把腿拉直一点、身体和腰拉近一点
+修改ragdoll, 把腿拉直一点、身体和腰拉近一点
 修复头部受伤贴图不匹配问题
 稍微修改了一下captain2
 增加了一个将来会用到的贴图
@@ -122,9 +131,9 @@ eventset适配游戏1.0版本
 增加了一些将来要改的贴图
 
 2/19
-给圣宣加标签，用于触发小丑之力
+给圣宣加标签, 用于触发小丑之力
 移除HGIS的获取方式
-修改EAHI自注射，消耗特定药物提供治疗
+修改EAHI自注射, 消耗特定药物提供治疗
 
 2/18
 修复一些问题
@@ -135,7 +144,7 @@ HGIS(WIP)
 移除血浆换基因
 
 2/4
-扩大头发贴图大小，现在支持更长的头发了
+扩大头发贴图大小, 现在支持更长的头发了
 应请求修改localization
 
 2/3
@@ -145,10 +154,10 @@ witd战地医疗服
 
 2/3
 平衡服装抗性
-更新潜水服数据，但不完全同步官方，加了点眩晕抗性
-修复vip1手臂隐藏的问题，改成舰长vip，加15驾驶技能
-更新pucs，加点水流抗性
-更新带鳍潜水服，修复制造消耗钛铝合金的问题
+更新潜水服数据, 但不完全同步官方, 加了点眩晕抗性
+修复vip1手臂隐藏的问题, 改成舰长vip, 加15驾驶技能
+更新pucs, 加点水流抗性
+更新带鳍潜水服, 修复制造消耗钛铝合金的问题
 修复鱼叉枪里的手电筒不能镜像的问题
 更新海盗防弹衣商店写法
 删除了NPC整活对话
@@ -180,11 +189,11 @@ witd战地医疗服
 增加受伤贴图
 修正localization
 修改EAHI pucs的贴图并增加了rgb光效
-修改了异星血浆研究获得的基因，并修改概率增加失败概率
+修改了异星血浆研究获得的基因, 并修改概率增加失败概率
 修改了部分隐藏肢体
 删除了用不到的贴图
 增加了异星物质
-修改战术腰带的贴图，并更改穿戴位置
+修改战术腰带的贴图, 并更改穿戴位置
 更改封面大小为512
 更改了TODOlist
 增加一种脸型
@@ -203,8 +212,8 @@ witd战地医疗服
 大部分服装的密度、掉落状态的物理体积
 部分物品的价格（平民服装的价格没同步）
 修复战术背带分解产出套用了突击步枪的分解产出
-简化了带鳍潜水服的文档，与战斗潜水服相同的部分可以直接继承
-更新了被重写的原版武器的数据（密度降低，0.19官方把左轮射速加快100%，鱼叉减慢了50%，霰弹枪加快50%）
-更新文件路径，原OutpostGenerationNpcs.xml文件移动到NPCPrefabs文件夹，并更名为CombatMissionNpcs.xml
-更新海盗服的价格写法，补上物品栏图标
-移除人物动作文件夹，直接引用原版
+简化了带鳍潜水服的文档, 与战斗潜水服相同的部分可以直接继承
+更新了被重写的原版武器的数据（密度降低, 0.19官方把左轮射速加快100%, 鱼叉减慢了50%, 霰弹枪加快50%）
+更新文件路径, 原OutpostGenerationNpcs.xml文件移动到NPCPrefabs文件夹, 并更名为CombatMissionNpcs.xml
+更新海盗服的价格写法, 补上物品栏图标
+移除人物动作文件夹, 直接引用原版
