--- a/TODO.txt
+++ b/TODO.txt
@@ -11,25 +11,22 @@ Barotruama_Animated Classic
 	EPSP > E.P.S PUCS
 	隐形epsp > 实验性压力稳定剂注射耳机
 
-	思考：铁甲
-
-	黑市商人
+	商人增加商品
 	
 	增加衣服
 		u-81
 		坚野
-		剑士服
 		修女服
 	异星物质
 		异星物质提取器
-			到底怎么做这个东西还需要进一步思考
+			分解仪器
 		异星物质套装
 			增加item推进器
 		新的套装
 	改NPC发型
 		
 	新加发型
-		lots to do
+		考虑把兽耳分出去做成种族?
 	增加男性
 		lots to do
 	修改武器
@@ -41,20 +38,4 @@ Barotruama_Animated Classic
 	humanhusk肢体角色重做
 Barotruama_Animated_addon 
 	ToDo
-	航道中央的补给站，有npc，卖东西
-东亚重工科技
-	-东亚重工制造终端
-	-Emdrive
-	-横式机库门
-	-更高级的燃料棒
-	-更高级的基因拼接器
-	-防辐射基因
-	-开门钥匙
-	-远程制造机
-更有意义的天赋物品
-	-便携排水泵可接电
-	-更高级载货滑板车
-	-更高级的裂变加速器
-	-贫化增强
-	-3格基因拼接器
 站点NPC与事件
