--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,16 @@
+2024/8/23
+1.3.3c8.12
+修改: 多功能工具 > 多功能喷枪; 囚服;
+增加: 几个亚级分类; 简体中文本地化
+移动: faction.xml 
+完善: 联络员事件, 现在可以用了; 战士服
+TODO: 其他语言本地化; EXO; 异星潜水服; Permit(测试完了)
+DEV测试: EAI点数系统; 制造机; 积分兑换器; 异星物质提取器; 诗集; 更多枪(利用Az的图); 更多任务种类
+
 2024/8/22
 1.3.3c8.11
 删除: 不需要的AFF, talent
+增加: 破损潜水服, 一次性潜水服
 修复: EPSP移动速度, 水流抗性
 修改: 电基鱼叉, 增加手电筒格, 改变鱼叉贴图
 修改路径: 把几种EPSP放入EPSPSeries文件夹
