移动: EA-Hi > Addons; 移动TSM到Addons文件夹; Faction.xml

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 1.3.3c8.12
 修改: 多功能工具 > 多功能喷枪; 囚服;
 增加: 几个亚级分类; 简体中文本地化
-移动: faction.xml 
+移动: EA-Hi > Addons; 移动TSM到Addons文件夹; Faction.xml
 完善: 联络员事件, 现在可以用了; 战士服
 TODO: 其他语言本地化; EXO; 异星潜水服; Permit(测试完了)
 DEV测试: EAI点数系统; 制造机; 积分兑换器; 异星物质提取器; 诗集; 更多枪(利用Az的图); 更多任务种类
