--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+2024/8/26
+1.3.3c8.13
+修复: 错误的贴图路径
+修改; 异星物质贴图
+增加: 白色囚服
+DEV: 运输船任务(需要测试); 异星物质提取器&制造机(测试完了);Permit(测试完了);血清; 一艘camel充当随机运输船
+TODO: 其他语言本地化; EXO(暂放); 异星潜水服(暂放); 其他WIP物品; 积分系统(需要开发);需要做一些船只
+    信标(需要开发)
+贴图问题: 扩容包; 联络员事件sprite; 
+
 2024/8/23
 1.3.3c8.12
 修改: 多功能工具 > 多功能喷枪; 囚服;
@@ -6,6 +16,7 @@
 完善: 联络员事件, 现在可以用了; 战士服
 TODO: 其他语言本地化; EXO; 异星潜水服; Permit(测试完了)
 DEV测试: EAI点数系统; 制造机; 积分兑换器; 异星物质提取器; 诗集; 更多枪(利用Az的图); 更多任务种类
+    需要做一些船只
 
 2024/8/22
 1.3.3c8.11
@@ -30,7 +41,7 @@ DEV: 东亚重工广告, 派系贴图
 
 2024/8/13
 1.3.3c8.8
-增加subcategories标签如maid, cosplay, wip
+增加subcategory标签如maid, cosplay, wip
 DEV: faction, 加工台
 
 2024/8/11
