--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+2024/8/27
+1.3.3c8.14
+本地化: 繁体中文, 英文
+增加: 东亚重工便携式加工台; 激光指示器; 扳手螺丝刀二合一工具; 
+修改贴图: 异星物质
+TODO: 贴图:背包和腰包
+
 2024/8/26
 1.3.3c8.13
 修复: 错误的贴图路径
