--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,28 @@
+2024/09/14
+1.3.3c8.18
+Hair:
+    增加头发, 修改内容
+Main
+    修复: captain hat的sourcerect问题
+    增加: 
+        Earth: 战士服的代码编写; 咸鱼大剑
+        EPSP: 隐形EPSP系列; 
+TODO:
+    确保DEV部分不影响现有内容的正常游玩!
+
+    东亚重工便携式智能加工台贴图,和可放入物品种类,以及编写可用配方; 配方的编写和测试, 以及贴图;
+    派系和任务: 随机任务种类,如运输船, 被劫持运输船的编写和测试, 完成测试后需要设计更多船; 平步青云的重启和测试; 可招募NPC(新职业?); 
+    联络面板和积分系统: 联络面板的装饰贴图; 商人,应该分为马克商人和积分商人,在航道内的信标生成, 这种信标应该还有大型设施; 积分系统编写和测试, 包括积分兑换器, 积分卡; 公司镇暴警察事件; 
+
+    一个系统工程, 把所有的系列中的所有物品的获取方式进行整合, 这种整合应该考虑到和其他内容的同一性.
+    ESMT: 瞄准镜贴图; 
+    EPSP: 完成EMEXO原型; 异星物质潜水服; HGIS;
+    AddonMedical: 一整个系列的药剂, 参考nano mod; 
+    
+    助手服, 安全官制服的修改; 爬行者头套和迅猛龙, 与anaertailin联动; 小丑EXO的贴图; 战术腰带的物品栏贴图;
+    weapons.xml: 机关手枪可用AZ的贴图; 各类武器的贴图重置; 裂变加速器 改为不同弹药不同效果
+    uniform_new中的tight和swimming suit的重制; 
+
 2024/09/13
 1.3.3c8.17
 Hair:
